--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,42 @@ services:
     volumes:
       - mongo-db:/data
 
+
+  # Tutorial displays a web app to manipulate the context directly
+  tutorial:
+    image: fiware/tutorials.context-provider
+    hostname: tutorial
+    container_name: fiware-tutorial
+    depends_on:
+      - orion
+    networks:
+      default:
+        aliases:
+          - iot-sensors
+          - context-provider
+    expose:
+      - "${TUTORIAL_APP_PORT}" # localhost:3000
+      - "${TUTORIAL_DUMMY_DEVICE_PORT}" # localhost:3001
+    ports:
+      - "${TUTORIAL_APP_PORT}:${TUTORIAL_APP_PORT}" # localhost:3000
+      - "${TUTORIAL_DUMMY_DEVICE_PORT}:${TUTORIAL_DUMMY_DEVICE_PORT}" # localhost:3001
+    environment:
+      - "DEBUG=tutorial:*"
+      - "WEB_APP_PORT=${TUTORIAL_APP_PORT}" # Port used by the content provider proxy and web-app for viewing data
+      - "NGSI_VERSION=ngsi-ld"
+      - "CONTEXT_BROKER=http://orion:${ORION_PORT}/ngsi-ld/v1" # URL of the context broker to update context
+
+      - "IOTA_HTTP_HOST=iot-agent"
+      - "IOTA_HTTP_PORT=${IOTA_SOUTH_PORT}"
+      - "DUMMY_DEVICES_PORT=${TUTORIAL_DUMMY_DEVICE_PORT}" # Port used by the dummy IOT devices to receive commands
+      - "DUMMY_DEVICES_TRANSPORT=HTTP" # Default transport used by dummy Io devices
+      - "DUMMY_DEVICES_API_KEY=4jggokgpepnvsb2uv4s40d59ov"
+      - "OPENWEATHERMAP_KEY_ID=<ADD_YOUR_KEY_ID>"
+      - "TWITTER_CONSUMER_KEY=<ADD_YOUR_CONSUMER_KEY>"
+      - "TWITTER_CONSUMER_SECRET=<ADD_YOUR_CONSUMER_SECRET>"
+    healthcheck:
+      test: curl --fail -s http://tutorial:${TUTORIAL_APP_PORT}/version || exit 1
+
 networks:
   default:
     ipam:
