--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # Orion LD variables
 ORION_LD_PORT=1026
-ORION_LD_VERSION=0.2.0
+ORION_LD_VERSION=alpha-0.4.0
 
 # Scorpio variables
 SCORPIO_PORT=9090
-SCORPIO_VERSION=0.9.10
+SCORPIO_VERSION=0.9.11
 
 # MongoDB variables
 MONGO_DB_PORT=27017
