Remove type=Building

--- a/docker-compose/scorpio-aaio.yml
+++ b/docker-compose/scorpio-aaio.yml
@@ -72,6 +72,26 @@ services:
       POSTGRES_DB: ngb
 
 
+  # Databases
+  mongo-db:
+    image: mongo:${MONGO_DB_VERSION}
+    hostname: mongo-db
+    container_name: db-mongo
+    expose:
+      - "${MONGO_DB_PORT}"
+    ports:
+      - "${MONGO_DB_PORT}:${MONGO_DB_PORT}" # localhost:27017
+    networks:
+      - default
+    command: --nojournal
+    volumes:
+      - mongo-db:/data
+    healthcheck:
+      test: |
+        host=`hostname --ip-address || echo '127.0.0.1'`; 
+        mongo --quiet $host/test --eval 'quit(db.runCommand({ ping: 1 }).ok ? 0 : 2)' && echo 0 || echo 1    
+
+
   # Tutorial displays a web app to manipulate the context directly
   tutorial:
     image: fiware/tutorials.context-provider
