--- a/docker-compose/orion-ld.yml
+++ b/docker-compose/orion-ld.yml
@@ -20,8 +20,7 @@ version: "3.5"
 services:
   # Orion LD is the context broker
   orion:
-#    image: fiware/orion-ld:${ORION_LD_VERSION}
-    image: fiware/orion-ld
+    image: fiware/orion-ld:${ORION_LD_VERSION}
     hostname: orion
     container_name: fiware-orion-ld
     depends_on:
@@ -30,7 +29,7 @@ services:
       - default
     ports:
       - "${ORION_LD_PORT}:${ORION_LD_PORT}" # localhost:1026
-    command: -dbhost mongo-db -logLevel DEBUG -t 255
+    command: -dbhost mongo-db -logLevel DEBUG -forwarding
     healthcheck:
       test: curl --fail -s http://orion:${ORION_LD_PORT}/version || exit 1
       interval: 5s
