--- a/docker-compose/orion-ld.yml
+++ b/docker-compose/orion-ld.yml
@@ -60,14 +60,14 @@ services:
   # Tutorial displays a web app to manipulate the context directly
   tutorial:
     image: fiware/tutorials.context-provider
-    hostname: tutorial
+    hostname: iot-sensors
     container_name: fiware-tutorial
     depends_on:
       - orion
     networks:
       default:
         aliases:
-          - iot-sensors
+          - tutorial
           - context-provider
     expose:
       - "${TUTORIAL_APP_PORT}" # localhost:3000
