--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,13 @@ jobs:
         submodules: recursive
     - name: Build Images
       run: |
-        ./services create || true
-    - name: Run Script
+        ./services create test || true
+    - name: Run Orion
       run: |
-        ./services start test && ./services stop test
+        ./services orion test && ./services stop test
+    - name: Run Stellio
+      run: |
+        ./services stellio test && ./services stop test
+    - name: Run Scorpio
+      run: |
+        ./services scorpio test && ./services stop test
