--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Project name
 COMPOSE_PROJECT_NAME=fiware
+EXPOSED_PORT=1026
 
 # Orion LD variables
 ORION_LD_PORT=1026
@@ -7,7 +8,7 @@ ORION_LD_VERSION=1.4.0
 
 # Scorpio variables
 SCORPIO_PORT=9090
-SCORPIO_VERSION=4.1.3
+SCORPIO_VERSION=4.1.8
 
 # Stellio variables
 STELLIO_DOCKER_TAG=2.5.2
