--- a/docker-compose/common.yml
+++ b/docker-compose/common.yml
@@ -17,7 +17,25 @@
 # see: https://github.com/FIWARE/helm-charts/
 #
 version: "3.8"
-services:  
+services:
+  # @context file is served from here
+  ld-context:
+    labels:
+      org.fiware: 'tutorial'
+    image: httpd:alpine
+    hostname: context
+    container_name: fiware-ld-context
+    ports:
+        - "3004:80"
+    volumes:
+        - data-models:/usr/local/apache2/htdocs/
+        - type: bind
+          source: ${PWD}/conf/mime.types
+          target: /usr/local/apache2/conf/mime.types
+          read_only: true
+    healthcheck:
+      test: (wget --server-response --spider --quiet  http://context/ngsi-context.jsonld 2>&1 | awk 'NR==1{print $$2}'|  grep -q -e "200") || exit 1
+
   # Databases
   mongo-db:
     labels:
@@ -68,6 +86,8 @@ services:
       - "CONTEXT_BROKER=http://orion:${ORION_LD_PORT}/ngsi-ld/v1" # URL of the context broker to update context
       - "DEVICE_BROKER=http://devices:${ORION_EDGE_PORT}/v2" # URL of the device's context broker to update context
       - "NGSI_LD_PREFIX=urn:ngsi-ld:"
+
+      - "IOTA_JSON_LD_CONTEXT=http://context/ngsi-context.jsonld"
       
       - "IOTA_HTTP_HOST=iot-agent"
       - "IOTA_HTTP_PORT=${IOTA_SOUTH_PORT}"
@@ -87,3 +107,9 @@ networks:
 
 volumes:
   mongo-db: ~
+  data-models:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${PWD}/data-models
