--- a/docker-compose/stellio.yml
+++ b/docker-compose/stellio.yml
@@ -27,7 +27,7 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     ports:
-      - "${STELLIO_PORT}:8080"
+      - "${EXPOSED_PORT}:${STELLIO_PORT}"
     networks:
       - default
 
