--- a/docker-compose/stellio.yml
+++ b/docker-compose/stellio.yml
@@ -79,7 +79,7 @@ services:
   kafka:
     labels:
       org.fiware: 'tutorial'
-    image: confluentinc/cp-kafka:7.3.1
+    image: confluentinc/cp-kafka:7.6.0
     container_name: kafka
     ports:
       - 29092:29092
@@ -98,9 +98,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: 'PLAINTEXT'
       KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
       KAFKA_LOG4J_ROOT_LOGLEVEL: INFO
-    volumes:
-      - ./stellio/kafka/update_run.sh:/tmp/update_run.sh
-    command: "bash -c 'if [ ! -f /tmp/update_run.sh ]; then echo \"ERROR: Did you forget the update_run.sh file that came with this docker-compose.yml file?\" && exit 1 ; else /tmp/update_run.sh && /etc/confluent/docker/run ; fi'"
+      CLUSTER_ID: NjExODZhMWVjMzllMTFlZm
 
 
   # Databases
@@ -128,6 +126,10 @@ services:
       timeout: 5s
       retries: 20
       start_period: 10s
+
+  tutorial:
+    environment:
+      - "CONTEXT_BROKER=http://stellio:${STELLIO_PORT}/ngsi-ld/v1" # URL of the context broker to update context
 
      
 networks:
