--- a/docker-compose/stellio.yml
+++ b/docker-compose/stellio.yml
@@ -22,7 +22,7 @@ services:
     hostname: stellio
     labels:
       org.fiware: 'tutorial'
-    image: stellio/stellio-api-gateway:${STELLIO_DOCKER_TAG}
+    image: quay.io/fiware/stellio-api-gateway:${STELLIO_DOCKER_TAG}
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     ports:
@@ -34,7 +34,7 @@ services:
     container_name: stellio-search-service
     labels:
       org.fiware: 'tutorial'
-    image: stellio/stellio-search-service:${STELLIO_DOCKER_TAG}
+    image: quay.io/fiware/stellio-search-service:${STELLIO_DOCKER_TAG}
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_R2DBC_URL=r2dbc:postgresql://postgres/stellio_search
@@ -57,7 +57,7 @@ services:
     container_name: stellio-subscription-service
     labels:
       org.fiware: 'tutorial'
-    image: stellio/stellio-subscription-service:${STELLIO_DOCKER_TAG}
+    image: quay.io/fiware/stellio-subscription-service:${STELLIO_DOCKER_TAG}    
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_R2DBC_URL=r2dbc:postgresql://postgres/stellio_subscription
