--- a/docker-compose/common.yml
+++ b/docker-compose/common.yml
@@ -81,7 +81,7 @@ services:
       - "WEB_APP_PORT=${TUTORIAL_APP_PORT}" # Port used by the content provider proxy and web-app for viewing data
       - "NGSI_VERSION=ngsi-ld"
       - "CONTEXT_BROKER=http://orion:${ORION_LD_PORT}/ngsi-ld/v1" # URL of the context broker to update context
-
+      - "IOTA_JSON_LD_CONTEXT=http://context/ngsi-context.jsonld"
 networks:
   default:
     labels:
